--- a/config.toml
+++ b/config.toml
@@ -19,6 +19,32 @@ output_dir = "docs"
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
 
+# A list of directories used to search for additional `.sublime-syntax` files.
+extra_syntaxes = []
+
+# The theme to use for code highlighting.
+# See below for list of allowed values.
+highlight_theme = "one-dark"
+
+# When set to "true", emoji aliases translated to their corresponding
+# Unicode emoji equivalent in the rendered Markdown files. (e.g.: :smile: => 😄)
+render_emoji = true
+
+# Whether external links are to be opened in a new tab
+# If this is true, a `rel="noopener"` will always automatically be added for security reasons
+external_links_target_blank = true
+
+# Whether to set rel="nofollow" for all external links
+external_links_no_follow = true
+
+# Whether to set rel="noreferrer" for all external links
+external_links_no_referrer = true
+
+# Whether smart punctuation is enabled (changing quotes, dashes, dots in their typographic form)
+# For example, `...` into `…`, `"quote"` into `“curly”` etc
+smart_punctuation = false
+
+
 # [extra]
 # # Put all your custom variables here
 
@@ -46,7 +72,7 @@ navbar_items = [
     { code = "en", nav_items = [
         { url = "$BASE_URL/", name = "Home" },
         { url = "$BASE_URL/publications", name = "Publications" },
-        { url = "$BASE_URL/cv", name = "CV" },
+        { url = "$BASE_URL/cv/MesicekCV.pdf", name = "CV", new = true },
         # { url = "$BASE_URL/tags", name = "Tags" },
         # { url = "$BASE_URL/categories", name = "Categories" },
     ] },
